[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -63.0
margin_right = 45.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 90.0
margin_bottom = 14.0
text = "Kitten Heaven"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 5 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 90.0
margin_bottom = 47.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Iniciar"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 90.0
margin_bottom = 71.0
text = "Como Jogar"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 95.0
text = "Cr√©ditos"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 90.0
margin_bottom = 119.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Sair"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
